--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-table": "^8.20.6",
     "@types/file-saver": "^2.0.7",
     "@types/xlsx": "^0.0.35",
+    "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
