--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.1",
